--- a/src/app/client-info/client-info.component.html
+++ b/src/app/client-info/client-info.component.html
@@ -20,7 +20,7 @@
                 <mat-label *ngIf="client.city">{{ client.city }}</mat-label>
                 <mat-label *ngIf="client.country">{{ client.country }}</mat-label>
                 <mat-label *ngIf="client.email">{{ client.email }}</mat-label>
-                <mat-label *ngIf="client.phone">{{ client.phone }}</mat-label>
+                <mat-label *ngIf="client.phone">{{ client.phone | phoneNumber }}</mat-label>
             </div>
         </mat-card-content>
     </mat-card>
