--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
+@import "~angular-notifier/styles";
 /* You can add global styles to this file, and also import other style files */
 body{
     margin: 0;
@@ -11,3 +12,4 @@ body{
     margin-top: 1rem;
     width: fit-content;
 }
+
